--- a/Clients.html
+++ b/Clients.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact Us - Brand</title>
+    <title>Testimonials - Brand</title>
     <meta name="description" content="Safety and Automation">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
@@ -34,26 +34,108 @@
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="Products.html">our PRODUCTS</a></li>
                     <li class="nav-item"><a class="nav-link" href="services.html">our Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Clients.html">Our Clients</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact-us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Clients.html">Our Clients</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="page contact-us-page">
-        <section class="clean-block clean-form dark">
+    <main class="page testimonials">
+        <section class="text-center clean-block clean-testimonials dark" style="padding-left: 0;padding-right: 0;">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Contact Us</h2>
-                    <p>Contact now</p>
+                    <h2 class="text-info">Our Client's</h2>
                 </div>
-                <form>
-                    <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control" type="text" id="name" name="name"></div>
-                    <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control" type="text" id="subject" name="subject"></div>
-                    <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control" type="email" id="email" name="email"></div>
-                    <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control" id="message" name="message"></textarea></div>
-                    <div class="mb-3"><button class="btn btn-primary" type="submit">Send</button></div>
-                </form>
+                <div class="row">
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img class="d-xl-flex justify-content-xl-center align-items-xl-center" src="assets/img/logos/1.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-xl-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img class="d-xl-flex justify-content-xl-center align-items-xl-center" src="assets/img/2.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img class="d-xl-flex justify-content-xl-center align-items-xl-center" src="assets/img/3.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/4.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/5.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/logos/6.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/7.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/8.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/logos/9.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/4.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/5.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4">
+                        <div class="card clean-testimonial-item border-0 rounded-0">
+                            <div class="card-body"><img src="assets/img/logos/6.png">
+                                <h3 class="text-center">John Smith</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
