--- a/pricing.html
+++ b/pricing.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Features - Brand</title>
+    <title>Pricing - Brand</title>
     <meta name="description" content="Safety and Automation">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
@@ -40,29 +40,62 @@
             </div>
         </div>
     </nav>
-    <main class="page">
-        <section class="clean-block features">
+    <main class="page pricing-table-page">
+        <section class="clean-block clean-pricing dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Features</h2>
+                    <h2 class="text-info">Pricing Table</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-md-5 feature-box"><i class="icon-star icon"></i>
-                        <h4>Bootstrap 4</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 col-lg-4">
+                        <div class="clean-pricing-item">
+                            <div class="heading">
+                                <h3>BASIC</h3>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="features">
+                                <h4><span class="feature">Full Support:&nbsp;</span><span>No</span></h4>
+                                <h4><span class="feature">Duration:&nbsp;</span><span>30 Days</span></h4>
+                                <h4><span class="feature">Storage:&nbsp;</span><span>10GB</span></h4>
+                            </div>
+                            <div class="price">
+                                <h4>$25</h4>
+                            </div><button class="btn btn-outline-primary d-block w-100" type="button">BUY NOW</button>
+                        </div>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-pencil icon"></i>
-                        <h4>Customizable</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 col-lg-4">
+                        <div class="clean-pricing-item">
+                            <div class="ribbon"><span>Best Value</span></div>
+                            <div class="heading">
+                                <h3>PRO</h3>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="features">
+                                <h4><span class="feature">Full Support:&nbsp;</span><span>Yes</span></h4>
+                                <h4><span class="feature">Duration:&nbsp;</span><span>60 Days</span></h4>
+                                <h4><span class="feature">Storage:&nbsp;</span><span>50GB</span></h4>
+                            </div>
+                            <div class="price">
+                                <h4>$50</h4>
+                            </div><button class="btn btn-primary d-block w-100" type="button">BUY NOW</button>
+                        </div>
                     </div>
-                    <div class="col-md-5 feature-box"><i class="icon-screen-smartphone icon"></i>
-                        <h4>Responsive</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                    </div>
-                    <div class="col-md-5 feature-box"><i class="icon-refresh icon"></i>
-                        <h4>All Browser Compatibility</h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                    <div class="col-md-5 col-lg-4">
+                        <div class="clean-pricing-item">
+                            <div class="heading">
+                                <h3>PREMIUM</h3>
+                            </div>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <div class="features">
+                                <h4><span class="feature">Full Support:&nbsp;</span><span>Yes</span></h4>
+                                <h4><span class="feature">Duration:&nbsp;</span><span>120 Days</span></h4>
+                                <h4><span class="feature">Storage:&nbsp;</span><span>150GB</span></h4>
+                            </div>
+                            <div class="price">
+                                <h4>$150</h4>
+                            </div><button class="btn btn-outline-primary d-block w-100" type="button">BUY NOW</button>
+                        </div>
                     </div>
                 </div>
             </div>
