--- a/about-us.html
+++ b/about-us.html
@@ -4,29 +4,37 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>About Us - Future Connect</title>
-    <meta name="description" content="Fire, Security and Automation">
+    <title>About Us - Brand</title>
+    <meta name="description" content="Safety and Automation">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="2439x2328" href="assets/img/fc-icon.png">
+    <link rel="icon" type="image/png" sizes="2439x2328" href="assets/img/fc-icon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Cookie">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/css/Bold-BS4-Footer-Big-Logo.css">
+    <link rel="stylesheet" href="assets/css/Button-Outlines---Pretty.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Pretty-Footer.css">
+    <link rel="stylesheet" href="assets/css/Image-slider-carousel-With-arrow-buttons-1.css">
+    <link rel="stylesheet" href="assets/css/Image-slider-carousel-With-arrow-buttons.css">
     <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar">
-        <div class="container"><a class="navbar-brand logo" href="#">Future Connect</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(255,255,255);">
+        <div class="container"><a href="/">
+<img border="0" alt="W3Schools" src="assets/img/Logo_DIA.svg" style="margin-top: 20px;max-width: 300px;height: 100%;" />
+</a><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="service-page.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="features.html">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="testimonials.html">Testimonials</a></li>
-                    <li class="nav-item"><a class="nav-link" href="faq.html">FAQ</a></li>
                     <li class="nav-item"><a class="nav-link active" href="about-us.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Products.html">our PRODUCTS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">our Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Clients.html">Our Clients</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
@@ -35,76 +43,70 @@
     <main class="page">
         <section class="clean-block about-us">
             <div class="container">
-                <div class="block-heading">
-                    <h2 class="text-info">About Us</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar1.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">John Smith</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar2.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Robert Downturn</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 col-lg-4">
-                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/avatar3.jpg">
-                            <div class="card-body info">
-                                <h4 class="card-title">Ally Sanders</h4>
-                                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                                <div class="icons"><a href="#"><i class="icon-social-facebook"></i></a><a href="#"><i class="icon-social-instagram"></i></a><a href="#"><i class="icon-social-twitter"></i></a></div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <div class="block-heading"></div>
             </div>
+            <h2 class="text-info" style="height: 34px;margin-bottom: 0;margin-top: -35px;margin-right: 7px;margin-left: 38px;padding-left: 162px;width: 1136px;">About Us</h2>
+            <p style="margin-right: 45;margin-left: 139;text-align: justify;max-width: 1200px;height: 9;margin-bottom: 0px;padding-top: 0px;padding-left: 200px;margin-top: 0px;color: rgb(33, 37, 41);font-size: 16px;padding-right: 0px;"><br>“Future Connect was promoted in year 2010 by a group of engineers having sound experience behind them in working with leading companies in the field of electronic security &amp;Automation systems. This experience has helped us to offer the perfect customize solutions to the need.<br><br>We are proud to introduce ourselves as Importers, Distributors, System Designers &amp; Integrators for a variety of electronic security and automation systems to enable on-line monitoring and controlling the access to various points, providing remote surveillance and perimeter protection.<br><br></p>
         </section>
     </main>
-    <footer class="page-footer dark">
-        <footer>
-            <div class="row">
-                <div class="col-sm-6 col-md-4 footer-navigation">
-                    <h3><a href="#">Company<span>logo </span></a></h3>
-                    <p class="links"><a href="#">Home</a><strong> · </strong><a href="#">Blog</a><strong> · </strong><a href="#">Pricing</a><strong> · </strong><a href="#">About</a><strong> · </strong><a href="#">Faq</a><strong> · </strong><a href="#">Contact</a></p>
-                    <p class="company-name">Company Name © 2015 </p>
+    <h2 class="text-info" style="height: 34px;margin-bottom: 0;margin-top: -106px;margin-right: 7px;margin-left: 38px;width: 1136px;padding-left: 162px;padding-top: 21px;">Our Team</h2>
+    <p style="margin-right: 45;margin-left: 139;text-align: justify;max-width: 1200px;height: 9;margin-bottom: 0px;padding-top: 49px;padding-left: 200px;margin-top: 0px;color: rgb(33, 37, 41);font-size: 16px;padding-right: 0px;">All our staff is well exposed to various applications and processes involved to offer perfect solutions. We have strong business and technical associations with the market leaders for their products. With the world-class quality products and our well-proven application knowledge, we are in a position to offer the most economical &amp; techno-commercial solutions to customer’s needs.</p>
+    <h2 class="text-info" style="height: 34px;margin-bottom: 0;margin-top: 40px;margin-right: 7px;margin-left: 38px;width: 1136px;padding-left: 162px;padding-top: 20px;">Our Vision</h2>
+    <p style="margin-right: 45;margin-left: 0;text-align: justify;max-width: 1200px;height: 11;margin-bottom: 0px;padding-top: 49px;padding-left: 200px;margin-top: 0px;padding-right: 0px;">To become solution selling company in the field of electronic security and automation field with 100% customer retention.</p>
+    <h2 class="text-info" style="height: 34px;margin-bottom: 0;margin-top: 25px;margin-right: 7px;margin-left: 38px;text-align: left;width: 1136px;padding-left: 162px;padding-top: 21px;">Our Approach</h2>
+    <p style="margin-right: 45;margin-left: 139;text-align: justify;max-width: 1200px;height: 36;margin-bottom: 0px;padding-top: 49px;padding-left: 200px;margin-top: 0px;padding-right: 0px;">Safety &amp;automation Redefined', being our objective, looks into key concerns such as Manageability and Flexibility for the optimum utilization of the best available systems &amp; solutions in the field of security, with productive manpower and effective utilization and implementation.<br><br>Our objective is to bring new standards of reliability, flexibility, performance, and value to products. This focus has allowed us to establish a good reputation for integrating innovative security products that are easy to install, service, and use.</p>
+    <p style="margin-right: 45;margin-left: 139;text-align: justify;max-width: 1200px;height: 36;margin-bottom: 0px;padding-top: 17px;padding-left: 200px;margin-top: 0px;padding-right: 0px;">•&nbsp;&nbsp;On-Call Customer Support<br><br>•&nbsp;&nbsp;Carefully compiled service documentation.<br><br>•&nbsp;&nbsp;Trained service personnel.<br><br>•&nbsp;&nbsp;Equipped with all the essential tools.<br><br>•&nbsp;&nbsp;Ready stock of spares and consumables.<br><br>•&nbsp;&nbsp;Warranty on total<br><br>•&nbsp;&nbsp;operation.<br><br>•&nbsp;&nbsp;Emphasis on Pre &amp; Post&nbsp;Sale&nbsp;Support.</p>
+    <section class="clean-block about-us" style="background: #ffffff;">
+        <h2 class="text-info" style="margin-top: 110px;margin-bottom: -31px;margin-left: 604px;">Our Clients</h2>
+        <div class="clean-block add-on sponsors" style="min-height: 0px;margin-top: -17px;"><a href="#"><img src="assets/img/logos/download%20(2).png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/brigade-logo_horizontal-2048px.png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/01_Kia_s_new_logo_and_brand_sl_1200x768.webp" style="filter: saturate(86%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/download%20(6).png" style="filter: saturate(79%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/Indian_Railway_Logo_1-695x700.png" width="100" style="filter: saturate(81%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/lg-cns-vector-logo.png" style="filter: saturate(65%);"></a></div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: -45px;padding-left: 12px;margin-left: 627px;" href="Clients.html">View More →</a>
+        <div></div>
+    </section>
+    <footer id="myFooter" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;background: rgba(247,253,254,0.46);">
+        <div class="container-fluid">
+            <div class="row text-center">
+                <div class="col-12 col-sm-6 col-md-3 offset-xl-1" style="margin-top: 49px;"><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;padding-bottom: 10px;padding-top: 1px;margin: 12px;margin-top: 16px;margin-right: 31px;margin-bottom: 26px;margin-left: 31px;font-size: 22px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+                    <h1 class="logo" style="margin-top:30px;"></h1><i class="fa fa-facebook" style="color: var(--bs-gray-700);font-size: 32px;padding-left: 0px;padding-right: 10px;"></i><a class="twitter" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-twitter" style="color: var(--bs-gray-700);font-size: 32px;padding-right: 10px;"></i></a><a class="google" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-google-plus" style="color: var(--bs-gray-700);font-size: 32px;padding-right: 10px;"></i></a><a class="linkedin" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-linkedin" style="color: var(--bs-gray-700);font-size: 32px;padding-bottom: 10px;"></i></a>
                 </div>
-                <div class="col-sm-6 col-md-4 footer-contacts">
-                    <div><span class="fa fa-map-marker footer-contacts-icon"> </span>
-                        <p><span class="new-line-span">21 Revolution Street</span> Paris, France</p>
-                    </div>
-                    <div><i class="fa fa-phone footer-contacts-icon"></i>
-                        <p class="footer-center-info email text-start"> +1 555 123456</p>
-                    </div>
-                    <div><i class="fa fa-envelope footer-contacts-icon"></i>
-                        <p> <a href="#" target="_blank">support@company.com</a></p>
-                    </div>
+                <div class="col-12 col-sm-6 col-md-2 offset-xl-0" style="color: #737373;text-align: left;">
+                    <h5 style="color: var(--bs-blue);">Our Company</h5>
+                    <ul style="color: #737373;">
+                        <li style="color: #737373;"><a href="about-us.html" style="color: #737373;">About Us</a></li>
+                        <li style="color: #737373;"><a href="contact-us.html" style="color: #737373;">Contact</a></li>
+                        <li style="color: #737373;"><a href="#" style="color: #737373;">FAQ<br></a></li>
+                        <li style="color: #737373;"><a href="#" style="color: #737373;">Privacy Policy</a></li>
+                    </ul>
                 </div>
-                <div class="col-md-4 footer-about">
-                    <h4>About the company</h4>
-                    <p> Lorem ipsum dolor sit amet, consectateur adispicing elit. Fusce euismod convallis velit, eu auctor lacus vehicula sit amet. </p>
-                    <div class="social-links social-icons"><a href="#"><i class="fa fa-facebook"></i></a><a href="#"><i class="fa fa-twitter"></i></a><a href="#"><i class="fa fa-linkedin"></i></a><a href="#"><i class="fa fa-github"></i></a></div>
+                <div class="col-12 col-sm-6 col-md-2 offset-xl-0" style="color: var(--bs-blue);">
+                    <h5 style="color: var(--bs-blue);text-align: left;">Useful links</h5>
+                    <ul style="text-align: left;">
+                        <li style="color: var(--bs-blue);background: rgba(13,110,253,0);border-color: var(--bs-blue);text-align: left;"></li>
+                        <li style="color: #737373;text-align: left;"><a href="Products.html" style="color: #737373;text-align: left;">Our Products<br></a></li>
+                        <li style="color: #737373;text-align: left;"><a href="services.html" style="color: #737373;text-align: left;">Our Services</a></li>
+                        <li style="color: #737373;text-align: left;"><a href="Clients.html" style="color: #737373;text-align: left;">Our Clients</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xl-3 offset-xl-0 social-networks" style="background: rgba(13,110,253,0);text-align: left;">
+                    <h5 style="color: var(--bs-blue);text-align: left;margin-top: 0;">Find US</h5>
+                    <div></div>
+                    <p style="color: var(--bs-gray);text-align: left;margin-bottom: 21px;">400/107, 2nd floor, 38th cross,26th main, 9th block, Jayanagar,Bengaluru, Karnataka 560069</p>
+                    <p class="text-start d-xl-flex justify-content-xl-center align-items-xl-center" style="color: var(--bs-gray);text-align: center;margin-bottom: 0;margin-left: 0;margin-top: 0;margin-right: 0;padding-left: 0;padding-right: 184px;"><i class="fa fa-phone" style="color: rgb(59,58,58);padding-right: 11px;"></i>(080)4170 0551</p>
+                    <p class="d-xl-flex justify-content-xl-center align-items-xl-center" style="color: var(--bs-gray);text-align: center;margin: 0;margin-bottom: 0;margin-left: 0;margin-top: 0;margin-right: 0;padding-right: 76px;"><i class="fa fa-envelope" style="color: rgb(59,58,58);margin-left: -43px;margin-right: 0px;padding-left: 0;padding-right: 11px;"></i>info@futureconnect.in<br></p>
                 </div>
             </div>
-        </footer>
-        <div class="footer-copyright">
-            <p>© 2021 Copyright Text</p>
+            <div class="row footer-copyright" style="background: rgb(255,255,255);">
+                <div class="col">
+                    <p style="color: var(--bs-gray);">© 2021 FutureConnect.</p>
+                </div>
+            </div>
         </div>
     </footer>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
     <script src="assets/js/theme.js"></script>
+    <script src="assets/js/Image-slider-carousel-With-arrow-buttons.js"></script>
 </body>
 
 </html>
