--- a/index.html
+++ b/index.html
@@ -1,47 +1,146 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="text-center" style="background: url(&quot;https://cdn.bootstrapstudio.io/placeholders/1400x800.png&quot;);">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>maintanace</title>
+    <title>Home - Brand</title>
+    <meta name="description" content="Safety and Automation">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
+    <link rel="icon" type="image/png" sizes="2439x2328" href="assets/img/fc-icon.png">
+    <link rel="icon" type="image/png" sizes="2439x2328" href="assets/img/fc-icon.png">
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/Highlight-Clean.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
-    <link rel="stylesheet" href="assets/css/Navbar---Logo-Middle---Phone-Logo-Middle.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link rel="stylesheet" href="assets/css/Bold-BS4-Footer-Big-Logo.css">
+    <link rel="stylesheet" href="assets/css/Button-Outlines---Pretty.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+    <link rel="stylesheet" href="assets/css/Image-slider-carousel-With-arrow-buttons-1.css">
+    <link rel="stylesheet" href="assets/css/Image-slider-carousel-With-arrow-buttons.css">
+    <link rel="stylesheet" href="assets/css/vanilla-zoom.min.css">
 </head>
 
-<body>
-    <div><img id="logoimageonphone" src="assets/img/Drills4You%20logo%20fini.png">
-        <nav class="navbar navbar-light navbar-expand-md sticky-top" style="margin: 20px 0 0 0;">
-            <div class="container-fluid"><button data-bs-toggle="collapse" data-bs-target="#navcol-3" class="navbar-toggler"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navcol-2">
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item navigationitemsleft"></li>
-                        <li class="nav-item navigationitemsleft"></li>
-                    </ul>
-                </div><img data-aos="fade" data-aos-duration="3000" id="logoimage" src="assets/img/fc-logo.png">
-                <div class="collapse navbar-collapse" id="navcol-3">
-                    <ul class="navbar-nav me-auto">
-                        <li class="nav-item navigationitemsright"></li>
-                        <li class="nav-item navigationitemsright"></li>
-                    </ul>
+<body class="text-center">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(255,255,255);">
+        <div class="container"><a href="/">
+<img border="0" alt="W3Schools" src="assets/img/Logo_DIA.svg" style="margin-top: 20px;max-width: 300px;height: 100%;" />
+</a><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navcol-1">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Products.html">our PRODUCTS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="services.html">our Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Clients.html">Our Clients</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <main class="text-center page landing-page">
+        <section class="clean-block clean-hero" style="color: rgba(9, 162, 255, 0.85);background: url(&quot;assets/img/building-111.jpg&quot;) center / cover;">
+            <div class="text">
+                <h2 class="text-center" style="text-align: center;font-size: 45px;text-shadow: 4px 4px 8px rgb(52,79,120);">Welcome To FutureConnect.</h2>
+            </div>
+        </section>
+        <section class="text-center clean-block clean-info dark" style="background: rgb(255,255,255);">
+            <div class="container">
+                <div class="text-center block-heading">
+                    <h2 class="text-info">About Us</h2>
+                    <p class="text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center align-items-center" style="text-align: center;width: 861px;height: 94px;max-height: 100px;max-width: 686px;">Future Connect was promoted in year 2010 by a group of engineers having sound experience behind them in working with leading companies in the field of electronic security &amp;Automation systems. This experience has helped us to offer the perfect customize solutions to the need</p><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: 25px;" href="about-us.html">More About Us →</a>
                 </div>
             </div>
-        </nav>
-    </div>
-    <section class="highlight-clean">
-        <div class="container">
-            <div class="intro">
-                <h2 class="text-center">WE ARE IN MAINTENANCE , WE WILL GET BACK AS SOON AS POSSIBLE</h2>
+        </section>
+        <section class="clean-block about-us" style="background: linear-gradient(rgb(242,242,242) 0%, white), #ffffff;">
+            <div class="container">
+                <div class="block-heading">
+                    <h2 class="text-info">Our Products And Services</h2>
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/2.svg">
+                            <div class="card-body info">
+                                <h4 class="card-title">CCTV</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/1.svg">
+                            <div class="card-body info">
+                                <h4 class="card-title">🔥Fire Alarm</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/4.svg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Boom Barrier</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-lg-4 col-xl-3">
+                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/3.svg">
+                            <div class="card-body info">
+                                <h4 class="card-title">Intrusion Alarm</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: 25px;" href="Products.html">View More →</a>
+            <h2 class="text-info" style="margin-top: 118px;margin-bottom: -31px;">Our Clients</h2>
+            <div class="clean-block add-on sponsors" style="min-height: 0px;margin-top: -17px;"><a href="#"><img src="assets/img/logos/download%20(2).png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/brigade-logo_horizontal-2048px.png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/01_Kia_s_new_logo_and_brand_sl_1200x768.webp" style="filter: saturate(86%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/download%20(6).png" style="filter: saturate(79%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/Indian_Railway_Logo_1-695x700.png" width="100" style="filter: saturate(81%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/lg-cns-vector-logo.png" style="filter: saturate(65%);"></a></div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: -45px;" href="Clients.html">View More →</a>
+            <div></div>
+        </section>
+    </main>
+    <footer id="myFooter" style="border-color: rgb(255, 255, 255);border-top-color: rgb(255,;border-right-color: 255,;border-bottom-color: 255);border-left-color: 255,;background: rgba(247,253,254,0.46);">
+        <div class="container-fluid">
+            <div class="row text-center">
+                <div class="col-12 col-sm-6 col-md-3 offset-xl-1" style="margin-top: 49px;"><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;padding-bottom: 10px;padding-top: 1px;margin: 12px;margin-top: 16px;margin-right: 31px;margin-bottom: 26px;margin-left: 31px;font-size: 22px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a>
+                    <h1 class="logo" style="margin-top:30px;"></h1><i class="fa fa-facebook" style="color: var(--bs-gray-700);font-size: 32px;padding-left: 0px;padding-right: 10px;"></i><a class="twitter" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-twitter" style="color: var(--bs-gray-700);font-size: 32px;padding-right: 10px;"></i></a><a class="google" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-google-plus" style="color: var(--bs-gray-700);font-size: 32px;padding-right: 10px;"></i></a><a class="linkedin" href="#" style="color: var(--bs-gray-700);"><i class="fa fa-linkedin" style="color: var(--bs-gray-700);font-size: 32px;padding-bottom: 10px;"></i></a>
+                </div>
+                <div class="col-12 col-sm-6 col-md-2 offset-xl-0" style="color: #737373;text-align: left;">
+                    <h5 style="color: var(--bs-blue);">Our Company</h5>
+                    <ul style="color: #737373;">
+                        <li style="color: #737373;"><a href="about-us.html" style="color: #737373;">About Us</a></li>
+                        <li style="color: #737373;"><a href="contact-us.html" style="color: #737373;">Contact</a></li>
+                        <li style="color: #737373;"><a href="#" style="color: #737373;">FAQ<br></a></li>
+                        <li style="color: #737373;"><a href="#" style="color: #737373;">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-12 col-sm-6 col-md-2 offset-xl-0" style="color: var(--bs-blue);">
+                    <h5 style="color: var(--bs-blue);text-align: left;">Useful links</h5>
+                    <ul style="text-align: left;">
+                        <li style="color: var(--bs-blue);background: rgba(13,110,253,0);border-color: var(--bs-blue);text-align: left;"></li>
+                        <li style="color: #737373;text-align: left;"><a href="Products.html" style="color: #737373;text-align: left;">Our Products<br></a></li>
+                        <li style="color: #737373;text-align: left;"><a href="services.html" style="color: #737373;text-align: left;">Our Services</a></li>
+                        <li style="color: #737373;text-align: left;"><a href="Clients.html" style="color: #737373;text-align: left;">Our Clients</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3 col-xl-3 offset-xl-0 social-networks" style="background: rgba(13,110,253,0);text-align: left;">
+                    <h5 style="color: var(--bs-blue);text-align: left;margin-top: 0;">Find US</h5>
+                    <div></div>
+                    <p style="color: var(--bs-gray);text-align: left;margin-bottom: 21px;">400/107, 2nd floor, 38th cross,26th main, 9th block, Jayanagar,Bengaluru, Karnataka 560069</p>
+                    <p class="text-start d-xl-flex justify-content-xl-center align-items-xl-center" style="color: var(--bs-gray);text-align: center;margin-bottom: 0;margin-left: 0;margin-top: 0;margin-right: 0;padding-left: 0;padding-right: 184px;"><i class="fa fa-phone" style="color: rgb(59,58,58);padding-right: 11px;"></i>(080)4170 0551</p>
+                    <p class="d-xl-flex justify-content-xl-center align-items-xl-center" style="color: var(--bs-gray);text-align: center;margin: 0;margin-bottom: 0;margin-left: 0;margin-top: 0;margin-right: 0;padding-right: 76px;"><i class="fa fa-envelope" style="color: rgb(59,58,58);margin-left: -43px;margin-right: 0px;padding-left: 0;padding-right: 11px;"></i>info@futureconnect.in<br></p>
+                </div>
             </div>
-            <div class="buttons"></div>
+            <div class="row footer-copyright" style="background: rgb(255,255,255);">
+                <div class="col">
+                    <p style="color: var(--bs-gray);">© 2021 FutureConnect.</p>
+                </div>
+            </div>
         </div>
-    </section>
+    </footer>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+    <script src="assets/js/vanilla-zoom.js"></script>
+    <script src="assets/js/theme.js"></script>
+    <script src="assets/js/Image-slider-carousel-With-arrow-buttons.js"></script>
 </body>
 
 </html>
