--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Contact Us - Brand</title>
+    <title>Services - Brand</title>
     <meta name="description" content="Safety and Automation">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
     <link rel="icon" type="image/png" sizes="589x567" href="assets/img/fc-logo-ico.png">
@@ -33,27 +33,66 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about-us.html">About Us</a></li>
                     <li class="nav-item"><a class="nav-link" href="Products.html">our PRODUCTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="services.html">our Services</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="services.html">our Services</a></li>
                     <li class="nav-item"><a class="nav-link" href="Clients.html">Our Clients</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="contact-us.html">Contact Us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact-us.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <main class="page contact-us-page">
-        <section class="clean-block clean-form dark">
+    <main class="page service-page">
+        <section class="clean-block clean-services dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Contact Us</h2>
-                    <p>Contact now</p>
+                    <h2 class="text-info">Our Service's</h2>
                 </div>
-                <form>
-                    <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control" type="text" id="name" name="name"></div>
-                    <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control" type="text" id="subject" name="subject"></div>
-                    <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control" type="email" id="email" name="email"></div>
-                    <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control" id="message" name="message"></textarea></div>
-                    <div class="mb-3"><button class="btn btn-primary" type="submit">Send</button></div>
-                </form>
+                <div class="row">
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/scenery/1.png">
+                            <div class="card-body" style="padding-bottom: 37px;">
+                                <h4 class="card-title"><strong>SYSTEM DESIGN &amp; CONSULTANCY</strong></h4>
+                                <p class="card-text">At Future Connect, we have our own technical team which helps customers with the designing of your system as per your application. So that customers get well Engineered Designed system with correct application &amp; that will reduce the cost of unwanted items at unwanted areas in the systems.</p>
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/scenery/2.png">
+                            <div class="card-body" style="padding-bottom: 79px;">
+                                <h4 class="card-title"><strong>INSTALLATION &amp; COMMISSIONING</strong></h4>
+                                <p class="card-text">Future Connect, have its own technician team for the installation &amp; commissioning of the systems, so our customers will be not dependent on the installation &amp; commissioning part.</p>
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/scenery/3.png">
+                            <div class="card-body" style="padding-bottom: 100px;">
+                                <h4 class="card-title"><strong>SYSTEM TRAINING &amp; HANDOVER</strong></h4>
+                                <p class="card-text">we give complete training of the products to our customers and as a System Integrator, we Handover the job to our customer very professionally. </p>
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/scenery/5.png">
+                            <div class="card-body" style="padding-bottom: 80px;">
+                                <h4 class="card-title"><strong>SERVICE SUPPORT</strong></h4>
+                                <p class="card-text">We follow a customer-first policy so we ensure all our customers get timely service support. </p>
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-4">
+                        <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/scenery/4.png">
+                            <div class="card-body" style="padding-top: 16px;padding-bottom: 38px;">
+                                <h4 class="card-title"><strong>ANNUAL MAINTENANCE CONTRACT</strong></h4>
+                                <p class="card-text">We provide&nbsp;Annual Maintenance Contract of their existing systems at a very low cost so that the Installed systems can run for longer life &amp; get maintained properly. </p>
+                            </div>
+                            <div></div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
