--- a/contact-us.html
+++ b/contact-us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="margin-bottom: 0;padding-bottom: 0;margin-top: -91;">
 
 <head>
     <meta charset="utf-8">
@@ -25,9 +25,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(255,255,255);">
-        <div class="container"><a href="/">
-<img border="0" alt="W3Schools" src="assets/img/Logo_DIA.svg" style="margin-top: 20px;max-width: 300px;height: 100%;" />
-</a><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;" href="index.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -40,20 +38,52 @@
             </div>
         </div>
     </nav>
-    <main class="page contact-us-page">
+    <main class="page contact-us-page" style="padding-top: 0;">
         <section class="clean-block clean-form dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2 class="text-info">Contact Us</h2>
-                    <p>Contact now</p>
+                    <h2 class="text-info" style="margin-top: 39px;">Contact Us</h2>
                 </div>
-                <form>
-                    <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control" type="text" id="name" name="name"></div>
-                    <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control" type="text" id="subject" name="subject"></div>
-                    <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control" type="email" id="email" name="email"></div>
-                    <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control" id="message" name="message"></textarea></div>
-                    <div class="mb-3"><button class="btn btn-primary" type="submit">Send</button></div>
-                </form>
+                <section>
+                    <div class="row">
+                        <div class="col-xxl-6">
+                            <div class="row">
+                                <div class="col" style="padding-left: 12px;padding-top: 0;margin-top: 0;height: 53px;">
+                                    <h2 class="text-info" style="margin-top: 0px;font-size: 25px;">Find Us</h2>
+                                </div>
+                            </div><iframe allowfullscreen="" frameborder="0" src="https://www.google.com/maps/embed/v1/view?key=AIzaSyCAQgBzbuSGbZx5hPvWUqbNQarPtKbc7iU&amp;center=12.921458232894322%2C+77.59360637417238&amp;zoom=70" width="100%" height="700" style="filter: grayscale(53%);opacity: 0.80;padding-top: 0;margin-bottom: 0;margin-top: 0;height: 262px;border-radius: 3px;box-shadow: 1px 1px 9px rgba(131,131,132,0.46);border: 0px solid rgb(59,127,228);border-top-width: 0px;background: var(--bs-body-bg);"></iframe>
+                            <div class="row">
+                                <div class="col-xxl-6" style="padding-top: 20px;">
+                                    <h1 style="font-size: 19px;color: var(--bs-gray);"><i class="fa fa-phone" style="color: var(--bs-gray-600);"></i>&nbsp; &nbsp; <a href="tel:08041700551">(080) 4170 01551</a>,<br>&nbsp; &nbsp; &nbsp; &nbsp;<a href="tel:+9196207 63222">(+91) 96207 63222</a>,<br>&nbsp; &nbsp; &nbsp; &nbsp;<a href="tel:+917676228821">(+91) 7676228821</a></h1>
+                                </div>
+                                <div class="col-xxl-6">
+                                    <div class="row">
+                                        <div class="col" style="padding-top: 20px;">
+                                            <h1 style="font-size: 19px;color: var(--bs-gray);"><i class="fa fa-envelope" style="color: var(--bs-gray-600);"></i>&nbsp; &nbsp; <a href="mailto:info@futureconnect.in">info@futureconnect.in</a><br>&nbsp; &nbsp; &nbsp; &nbsp; <a href="mailto:sandeep@futureconnect.in">sandeep@futureconnect.in</a></h1>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xxl-6">
+                                    <h1 style="font-size: 19px;color: var(--bs-gray);padding-top: 32px;"><i class="fa fa-map-marker" style="color: var(--bs-gray-600);"></i>&nbsp; &nbsp; #400/107, 2nd floor,<br>&nbsp; &nbsp; &nbsp; 38th cross,26th main,<br>&nbsp; &nbsp; &nbsp; 9th block, Jayanagar,<br>&nbsp; &nbsp; &nbsp; Bengaluru, Karnataka<br>&nbsp; &nbsp; &nbsp; 560069<br></h1>
+                                </div>
+                                <div class="col">
+                                    <h1 style="font-size: 19px;color: var(--bs-gray);padding-top: 32px;">&nbsp; &nbsp; &nbsp;Poltno 118, BapuNagar,&nbsp; &nbsp; &nbsp;<br>&nbsp; &nbsp; &nbsp;Suchithra, Hyderabad, <br>&nbsp; &nbsp; &nbsp;Telangana <br>&nbsp; &nbsp; &nbsp;500055<br></h1>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col" style="margin-top: 53px;">
+                            <form style="padding-bottom: 40px;margin-bottom: 0;margin-top: 0;padding-top: 30px;height: 522px;">
+                                <div class="mb-3"><label class="form-label" for="name">Name</label><input class="form-control" type="text" id="name" name="name" required=""></div>
+                                <div class="mb-3"><label class="form-label" for="subject">Subject</label><input class="form-control" type="text" id="subject" name="subject" required=""></div>
+                                <div class="mb-3"><label class="form-label" for="email">Email</label><input class="form-control" type="email" id="email" name="email" required=""></div>
+                                <div class="mb-3"><label class="form-label" for="message">Message</label><textarea class="form-control" id="message" name="message" required=""></textarea></div>
+                                <div class="mb-3"><button class="btn btn-primary" type="submit">Send</button></div>
+                            </form>
+                        </div>
+                    </div>
+                </section>
             </div>
         </section>
     </main>
@@ -98,6 +128,7 @@
     </footer>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="assets/js/smart-forms.min.js"></script>
     <script src="assets/js/bs-init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
     <script src="assets/js/vanilla-zoom.js"></script>
