--- a/faq.html
+++ b/faq.html
@@ -25,9 +25,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(255,255,255);">
-        <div class="container"><a href="/">
-<img border="0" alt="W3Schools" src="assets/img/Logo_DIA.svg" style="margin-top: 20px;max-width: 300px;height: 100%;" />
-</a><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;" href="index.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
@@ -41,32 +39,11 @@
         </div>
     </nav>
     <main class="page faq-page">
-        <section class="clean-block clean-faq dark">
+        <section class="clean-block clean-faq dark" style="height: 596.188px;">
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info">FAQ</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                </div>
-                <div class="block-content">
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
-                        </div>
-                    </div>
-                    <div class="faq-item">
-                        <h4 class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h4>
-                        <div class="answer">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo. Lorem ipsum dolor sit amet, consectetur adipiscing elit.&nbsp;Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </section>
