--- a/index.html
+++ b/index.html
@@ -25,9 +25,7 @@
 
 <body class="text-center">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top bg-white clean-navbar" style="color: rgb(255,255,255);">
-        <div class="container"><a href="/">
-<img border="0" alt="W3Schools" src="assets/img/Logo_DIA.svg" style="margin-top: 20px;max-width: 300px;height: 100%;" />
-</a><a class="navbar-brand logo" href="#" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" style="background: url(&quot;assets/img/fc-logo.svg&quot;) left / cover;" href="index.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
@@ -41,7 +39,7 @@
         </div>
     </nav>
     <main class="text-center page landing-page">
-        <section class="clean-block clean-hero" style="color: rgba(9, 162, 255, 0.85);background: url(&quot;assets/img/building-111.jpg&quot;) center / cover;">
+        <section class="clean-block clean-hero" style="color: rgba(9, 162, 255, 0.85);background: url(&quot;assets/img/building-111.jpg&quot;) center / cover;height: 720px;">
             <div class="text">
                 <h2 class="text-center" style="text-align: center;font-size: 45px;text-shadow: 4px 4px 8px rgb(52,79,120);">Welcome To FutureConnect.</h2>
             </div>
@@ -63,35 +61,35 @@
                     <div class="col-sm-6 col-lg-4 col-xl-3">
                         <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/2.svg">
                             <div class="card-body info">
-                                <h4 class="card-title">CCTV</h4>
+                                <h4 class="card-title">CCTV Camera's</h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xl-3">
                         <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/1.svg">
                             <div class="card-body info">
-                                <h4 class="card-title">🔥Fire Alarm</h4>
+                                <h4 class="card-title">🔥Fire Alarm's</h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xl-3">
                         <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/4.svg">
                             <div class="card-body info">
-                                <h4 class="card-title">Boom Barrier</h4>
+                                <h4 class="card-title">Automatic Boom Barrier's</h4>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-lg-4 col-xl-3">
-                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/3.svg">
+                        <div class="card text-center clean-card"><img class="card-img-top w-100 d-block" src="assets/img/avatars/Untitled%20design%20(2).png">
                             <div class="card-body info">
-                                <h4 class="card-title">Intrusion Alarm</h4>
+                                <h4 class="card-title">Intrusion Alarm's</h4>
                             </div>
                         </div>
                     </div>
                 </div>
             </div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: 25px;" href="Products.html">View More →</a>
             <h2 class="text-info" style="margin-top: 118px;margin-bottom: -31px;">Our Clients</h2>
-            <div class="clean-block add-on sponsors" style="min-height: 0px;margin-top: -17px;"><a href="#"><img src="assets/img/logos/download%20(2).png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/brigade-logo_horizontal-2048px.png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;"><img src="assets/img/logos/01_Kia_s_new_logo_and_brand_sl_1200x768.webp" style="filter: saturate(86%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/download%20(6).png" style="filter: saturate(79%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/Indian_Railway_Logo_1-695x700.png" width="100" style="filter: saturate(81%);margin-right: 35px;"></a><a href="#"><img src="assets/img/logos/lg-cns-vector-logo.png" style="filter: saturate(65%);"></a></div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: -45px;" href="Clients.html">View More →</a>
+            <div class="clean-block add-on sponsors" style="min-height: 0px;margin-top: -17px;"><a href="#"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/download%20(2).png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;" title="Honeywell"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/brigade-logo_horizontal-2048px.png" style="background: rgb(255,255,255);filter: saturate(70%);padding-right: 0px;margin-right: 35px;" title="Brigade Gateway"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/01_Kia_s_new_logo_and_brand_sl_1200x768.webp" style="filter: saturate(86%);margin-right: 35px;" title="Kia Motor's"></a><a href="#"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/download%20(6).png" style="filter: saturate(79%);margin-right: 35px;" title="Himalaya Drug Company"></a><a href="#"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/Indian_Railway_Logo_1-695x700.png" width="100" style="filter: saturate(81%);margin-right: 35px;" title="Indian Railway's"></a><a href="#"><img data-bs-toggle="tooltip" data-bss-tooltip="" src="assets/img/logos/lg-cns-vector-logo.png" style="filter: saturate(65%);" title="LG CNS India Pvt Ltd. "></a></div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: -45px;" href="Clients.html">View More →</a>
             <div></div>
         </section>
     </main>
