--- a/index.html
+++ b/index.html
@@ -48,7 +48,18 @@
             <div class="container">
                 <div class="text-center block-heading">
                     <h2 class="text-info">About Us</h2>
-                    <p class="text-center text-sm-center text-md-center text-lg-center text-xl-center text-xxl-center align-items-center" style="text-align: center;width: 861px;height: 94px;max-height: 100px;max-width: 686px;">Future Connect was promoted in year 2010 by a group of engineers having sound experience behind them in working with leading companies in the field of electronic security &amp;Automation systems. This experience has helped us to offer the perfect customize solutions to the need</p><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: 25px;" href="about-us.html">More About Us →</a>
+                    <div class="row text-center">
+                        <div class="col-md-3 col-xl-3 offset-xl-0 social-networks" style="background: rgba(13,110,253,0);text-align: left;">
+                            <div></div>
+                        </div>
+                        <div class="col-md-3 col-xl-6 offset-xl-0 text-center social-networks" style="background: rgba(13,110,253,0);text-align: left;">
+                            <div></div>
+                            <p class="text-center" style="color: var(--bs-gray);text-align: left;margin-bottom: 21px;"><br>Future Connect was promoted in year 2010 by a group of engineers having sound experience behind them in working with leading companies in the field of electronic security &amp;Automation systems. This experience has helped us to offer the perfect customize solutions to the need..<br></p>
+                        </div>
+                        <div class="col-md-3 col-xl-3 offset-xl-0 social-networks" style="background: rgba(13,110,253,0);text-align: left;">
+                            <div></div>
+                        </div>
+                    </div><a class="btn border-pretty" role="button" style="color: var(--bs-blue);border-color: var(--bs-blue);padding-top: 6px;margin-top: 25px;" href="about-us.html">More About Us →</a>
                 </div>
             </div>
         </section>
